[package]
name = "gear-common"
description = "Gear common library for the runtime"
documentation = "https://docs.rs/gear-common"
keywords = ["gear", "wasm"]
categories = ["wasm"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
primitive-types = { workspace = true, features = ["scale-info"] }
log.workspace = true
enum-iterator.workspace = true

# Internal deps
gear-core.workspace = true
gear-common-codegen.workspace = true
gear-wasm-instrument = { workspace = true, optional = true }
gsys.workspace = true

# Substrate deps
sp-io.workspace = true
sp-std.workspace = true
sp-arithmetic.workspace = true
sp-runtime.workspace = true
frame-support.workspace = true
frame-system = { workspace = true, optional = true }
frame-benchmarking = { workspace = true, optional = true }

[target.'cfg(fuzz)'.dependencies]
fail = { workspace = true, features = [ "failpoints" ] }

[dev-dependencies]
hex-literal.workspace = true
proptest.workspace = true
gear-utils.workspace = true

[features]
default = ["std"]
std = [
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "sp-arithmetic/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "primitive-types/std",
    "gear-wasm-instrument?/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "gear-wasm-instrument",
]
