[package]
name = "gear-core-backend"
description = "Gear WASM backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
gear-core.workspace = true
gear-core-errors = { workspace = true, features = ["codec"] }
gear-core-backend-codegen.workspace = true
gear-lazy-pages-common.workspace = true
gsys = { workspace = true }

gear-wasm-instrument.workspace = true
gear-sandbox.workspace = true
gear-sandbox-env.workspace = true

actor-system-error.workspace = true

blake2-rfc.workspace = true
# Use max_level_debug feature to remove tracing in sys-calls by default.
log.workspace = true
derive_more.workspace = true
codec.workspace = true

[dev-dependencies]
codec.workspace = true
env_logger.workspace = true

[features]
default = ["std"]
std = ["gear-sandbox/std", "gear-wasm-instrument/std", "log/std"]
mock = []
