[package]
name = "gear-core-backend"
description = "Gear WASM backend"
documentation = "https://docs.rs/gear-core-backend"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gear-core.workspace = true
gear-core-errors = { workspace = true, features = ["codec"] }
gear-lazy-pages-common.workspace = true
gsys = { workspace = true }

gear-wasm-instrument.workspace = true
gear-sandbox.workspace = true
gear-sandbox-env.workspace = true

actor-system-error.workspace = true

blake2.workspace = true
bytemuck = { workspace = true, features = ["const_zeroed"] }
# Use max_level_debug feature to remove tracing in syscalls by default.
log.workspace = true
derive_more.workspace = true
parity-scale-codec.workspace = true


[dev-dependencies]
parity-scale-codec.workspace = true
tracing-subscriber.workspace = true
bytemuck = { workspace = true, features = ["derive"] }

[features]
default = ["std"]
std = ["gear-sandbox/std", "gear-wasm-instrument/std", "log/std"]
mock = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gear-workspace-hack.workspace = true
