[package]
name = "gear-core-errors"
description = "Shared errors for Gear core libraries"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
scale-info = { workspace = true, features = ["derive"], optional = true }
derive_more.workspace = true
enum-iterator.workspace = true

[features]
codec = ["scale-info"]
