[package]
name = "gear-core-errors"
description = "Shared errors for Gear core libraries"
documentation = "https://docs.rs/gear-core-errors"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
scale-info = { workspace = true, features = ["derive"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
enum-iterator.workspace = true
thiserror.workspace = true

[features]
codec = ["scale-info"]
serde = ["dep:serde"]
