[package]
name = "gear-core-processor"
description = "The core processor for Gear programs"
documentation = "https://docs.rs/core-processor"
keywords = ["gear", "wasm"]
categories = ["wasm"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gear-core.workspace = true
gear-core-errors = { workspace = true, features = ["codec"] }
gear-core-backend.workspace = true
gear-wasm-instrument.workspace = true
gear-lazy-pages-common.workspace = true
gear-runtime-interface.workspace = true
gsys.workspace = true

scale-info = { workspace = true, features = ["derive"] }
log.workspace = true
derive_more.workspace = true
actor-system-error.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"] }

[dev-dependencies]
env_logger.workspace = true
enum-iterator.workspace = true

[features]
default = ["std"]
std = [
    "gear-core-backend/std",
    "gear-runtime-interface/std",
]
strict = []
mock = []
gtest = []
