[package]
name = "gear-core-runner"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.41"
blake2-rfc = "*"
codec = { package = "parity-scale-codec", version = "2.2.0", features = ["derive"] }
gear-core = { path = "../core" }
gear-core-backend = { path = "../core-backend" }
log = "0.4.14"

[dev-dependencies]
env_logger = "0.8.4"
wabt = "0.10.0"
