[package]
name = "gear-core-runner"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
anyhow = { version = "1.0.51", default-features = false }
blake2-rfc = { version = "*", default-features = false }
codec = { package = "parity-scale-codec", version = "2.2.0", features = ["derive"], default-features = false }
gear-core = { path = "../core" }
gear-backend-common = { path = "../core-backend/common" }
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
env_logger = "0.9.0"
wabt = "0.10.0"
gear-backend-wasmtime = { path = "../core-backend/wasmtime" }

[features]
