[package]
name = "gear-core"
description = "Gear core library"
keywords = ["gear", "wasm"]
categories = ["wasm"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
gear-core-errors = { workspace = true, features = ["codec"] }
blake2-rfc.workspace = true
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
derive_more.workspace = true
log.workspace = true
gear-wasm-instrument.workspace = true
wasmparser.workspace = true
hex = { workspace = true, features = ["alloc"] }
hashbrown.workspace = true
static_assertions.workspace = true
paste = { workspace = true }
enum-iterator.workspace = true
byteorder.workspace = true

[dev-dependencies]
wabt.workspace = true
env_logger.workspace = true

[features]
strict = []
