[workspace]
resolver = "2"

members = [
    "async-init",
    "async-multisig",
    "async-sign",
    "bot",
    "piggy-bank",
]

exclude = ["binaries/*"]

[workspace.dependencies]
galloc = { path = "../galloc" }
gcore = { path = "../gcore" }
gstd = { path = "../gstd" }

[profile.release]
lto = true
opt-level = 's'
