[workspace.package]
authors = ["Gear Technologies"]
edition = "2021"
license = "GPL-3.0"

[workspace]
resolver = "2"

members = [
    "async-multisig",
    "async-sign",
    "bot",
    "capacitor",
    "collector",
    "status-code",
    "guestbook",
    "loop",
    "panicker",
    "program_generator",
    "token-vendor",
    "token-vendor/workshop-example",
    "wait",
]

exclude = ["binaries/*"]

[workspace.dependencies]
galloc = { path = "../galloc" }
gcore = { path = "../gcore" }
gstd = { path = "../gstd" }

[profile.release]
lto = true
opt-level = 's'
