[workspace.package]
authors = ["Gear Technologies"]
edition = "2021"
license = "GPL-3.0"

[workspace]
resolver = "2"

members = [
    "async",
    "async-init",
    "async-multisig",
    "async-sign",
    "async-recursion",
    "bot",
    "capacitor",
    "collector",
    "status-code",
    "futures-unordered",
    "guestbook",
    "incomplete_async_payloads",
    "loop",
    "minimal",
    "mutex",
    "panicker",
    "piggy-bank",
    "ping",
    "ping-gas",
    "program_generator",
    "program-id",
    "rwlock",
    "rwlock_write",
    "sync_duplicate",
    "token-vendor",
    "token-vendor/workshop-example",
    "wait",
]

exclude = ["binaries/*"]

[workspace.dependencies]
galloc = { path = "../galloc" }
gcore = { path = "../gcore" }
gstd = { path = "../gstd" }

[profile.release]
lto = true
opt-level = 's'
