[package]
name = "galloc"
description = "Gear Wasm allocator"
documentation = "https://docs.rs/galloc"
keywords = ["gear", "allocator", "wasm"]
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gsys.workspace = true
gcore.workspace = true
# add "checks" feature to enable hard checks in allocator
dlmalloc.workspace = true

[features]
debug = ["dlmalloc/debug"]
