[package]
name = "galloc"
description = "Gear Wasm allocator"
documentation = "https://docs.rs/galloc"
keywords = ["gear", "allocator", "wasm"]
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gsys.workspace = true
gcore.workspace = true
dlmalloc = { git = "https://github.com/gear-tech/dlmalloc-rs", version = "0.2.10", features = ["global"], optional = true }
# add "checks" feature to enable hard checks in allocator
gear-dlmalloc = "0.2.0"

[features]
debug = ["dlmalloc/debug"]
new-allocator = ["dlmalloc"]
