[package]
name = "gbuiltin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage = "https://gear-tech.io"
repository = "https://github.com/gear-tech/gear"

[dependencies]
derive_more.workspace = true
scale-info = { workspace = true, features = ["derive"] }
gear-core-errors.workspace = true
