[package]
name = "gcli"
description = "Gear program CLI"
keywords = ["gear", "cli", "wasm"]
categories = ["command-line-interface", "command-line-utilities", "wasm"]
documentation = "https://docs.rs/gcli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
gsdk.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
color-eyre.workspace = true
dirs.workspace = true
env_logger.workspace = true
futures.workspace = true
gmeta.workspace = true
gear-core.workspace = true
gear-core-errors.workspace = true
hex.workspace = true
jsonrpsee = { workspace = true, features = [ "http-client", "ws-client" ] }
keyring.workspace = true
lazy_static.workspace = true
libp2p = { workspace = true, features = [ "identify" ], optional = true }
log.workspace = true
nacl.workspace = true
scale-info.workspace = true
schnorrkel.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { workspace = true, features = ["std", "derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = [ "full" ] }
whoami.workspace = true
reqwest = { workspace = true, default-features = false, features = [ "json", "rustls-tls" ] }
etc.workspace = true
sp-io = { workspace = true, features = [ "std" ] }
sp-core = { workspace = true, features = [ "std" ] }
# TODO: use wasmi from workspace (#3214)
wasmi = { version = "0.30.0", features = ["std"] }

[dev-dependencies]
rand.workspace = true
demo-messager.workspace = true
demo-new-meta.workspace = true
demo-waiter.workspace = true
gsdk = { workspace = true, features = ["testing"] }
vara-runtime = { workspace = true, features = [ "std", "dev" ] }

[build-dependencies]
which.workspace = true

[features]
node-key = [ "libp2p" ]

[package.metadata.docs.rs]
all-features = true
