[package]
name = "gcli"
description = "Gear program CLI"
keywords = ["gear", "cli", "wasm"]
categories = ["command-line-interface", "command-line-utilities", "wasm"]
documentation = "https://docs.rs/gcli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gsdk.workspace = true
colored.workspace = true
anyhow.workspace = true
derive_more.workspace = true
dirs.workspace = true
tracing-subscriber.workspace = true
gear-core.workspace = true
gring = { workspace = true, features = ["cli"] }
hex.workspace = true
scale-info.workspace = true
serde.workspace = true
clap = { workspace = true, features = ["std", "derive"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
etc.workspace = true
runtime-primitives.workspace = true
url = { workspace = true, features = ["serde"] }
toml.workspace = true
gear-workspace-hack.workspace = true

[build-dependencies]

[features]
default = ["self-update"]
self-update = []

[dev-dependencies]
snapbox.workspace = true
gear-node-wrapper.workspace = true
indoc.workspace = true

[package.metadata.docs.rs]
all-features = true
