[package]
name = "gclient"
description = "API client for Gear node in Rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
gear-utils.workspace = true
gsdk = { workspace = true, features = ["testing"] }
gnode.workspace = true
gear-core.workspace = true
gear-core-errors.workspace = true

futures.workspace = true
anyhow.workspace = true
hex.workspace = true
subxt.workspace = true
parity-scale-codec.workspace = true
thiserror.workspace = true
async-trait.workspace = true
url.workspace = true
wabt.workspace = true

# client dependencies
gtest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wat.workspace = true
env_logger.workspace = true
hex-literal.workspace = true
log.workspace = true
demo-async-tester.workspace = true
demo-calc-hash.workspace = true
demo-calc-hash-in-one-block.workspace = true
demo-custom.workspace = true
demo-constructor = { workspace = true, features = ["std"] }
demo-distributor.workspace = true
demo-meta-io.workspace = true
demo-new-meta.workspace = true
demo-mul-by-const.workspace = true
demo-node.workspace = true
demo-program-factory.workspace = true
demo-proxy = { workspace = true, features = ["std"] }
demo-proxy-relay.workspace = true
demo-reserve-gas = { workspace = true, features = ["std"] }
gmeta = { workspace = true }
gstd = { workspace = true, features = ["debug"] }
demo-wat.workspace = true
demo-bls381 = { workspace = true, features = ["std"] }
ark-serialize = { workspace = true, features = ["derive"] }
ark-scale = { workspace = true, features = ["hazmat"] }
ark-bls12-381 = { workspace = true, features = ["curve"] }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }

[features]
default = ["client"]
client = ["gtest"]
