[package]
name = "gcore-primitives"
description = "Gear programs core primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
derive_more.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"], optional = true }
primitive-types = { workspace = true, features = ["scale-info"], optional = true }
scale-info = { workspace = true, features = ["derive"], optional = true }

[features]
codec = ["parity-scale-codec", "primitive-types", "scale-info"]
