[package]
name = "gcore"
description = "Gear programs core library"
documentation = "https://docs.rs/gcore"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
gsys.workspace = true
gprimitives.workspace = true
gear-core-errors.workspace = true
gear-stack-buffer.workspace = true

[dev-dependencies]
hex-literal.workspace = true
galloc.workspace = true

[features]
codec = ["gear-core-errors/codec", "gprimitives/codec"]
debug = []
