[package]
name = "gcore"
description = "Gear programs core library"
documentation = "https://docs.rs/gcore"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.cargo-shear]
ignored = [
  # docs
  "hex-literal",
  "galloc",
]

[dependencies]
gsys.workspace = true
gprimitives.workspace = true
gear-core-errors.workspace = true
gear-stack-buffer.workspace = true
thiserror.workspace = true
arrayvec.workspace = true

[dev-dependencies]
hex-literal.workspace = true
galloc.workspace = true

[features]
codec = ["gear-core-errors/codec", "gprimitives/codec"]
debug = []
ethexe = ["gsys/ethexe"]
