[package]
name = "gear-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gear-core = { path = "../" }
wasmtime = { version = "0.27", default-features = false, optional = true }
wasmi = { version = "*", default-features = false, optional = true }
libc = "0.2"
cfg-if = "1.0.0"
anyhow = "1"
log = "0.4"

[features]
default = ["wasmtime_backend"]
wasmtime_backend = ["wasmtime", "wasmtime/parallel-compilation"]
wasmi_backend = ["wasmi", "wasmi/core"]