[package]
name = "gear-backend"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
cfg-if = "1.0.0"
gear-core = { path = "../" }
libc = "0.2.98"
log = "0.4.14"
wasmtime = { version = "0.27.0", default-features = false, optional = true }
wasmi = { version = "0.9.0", default-features = false, optional = true }

[features]
default = ["wasmtime_backend"]
wasmtime_backend = ["wasmtime", "wasmtime/parallel-compilation"]
wasmi_backend = ["wasmi", "wasmi/core"]
