[package]
name = "gear-runner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gear-core = { path = "../" }
gear-backend = { path = "../gear-backend" }
wasmtime = { version = "0.27", default-features = false, features = ["parallel-compilation"] }
codec = { package = "parity-scale-codec", version = "2", features = ["derive"] }
anyhow = "1"
log = "0.4"

[dev-dependencies]
wabt = "0.10.0"