[package]
name = "gear-runner"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
codec = { package = "parity-scale-codec", version = "2.2.0", features = ["derive"] }
gear-core = { path = "../" }
gear-backend = { path = "../gear-backend" }
blake2-rfc = "*"
log = "0.4.14"

[dev-dependencies]
env_logger = "0.8.4"
wabt = "0.10.0"
