[package]
name = "gear-test-lib"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
gear-core = { path = "../core" }
gear-backend-wasmtime = { path = "../core-backend/wasmtime" }
core-processor = { package = "gear-core-processor", path = "../core-processor" }

codec = { package = "parity-scale-codec", version = "2", features = ["derive"] }
hex = "0.4.3"
