[package]
name = "gear-test"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gear-test"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
derive_more.workspace = true
env_logger.workspace = true
colored.workspace = true
regex.workspace = true
serde_yaml.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["std", "derive"] }
serde_json.workspace = true
log.workspace = true
rayon.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
gear-wasm-instrument = { workspace = true, features = ["std"] }
primitive-types = { workspace = true, features = ["std", "serde", "scale-info"] }
once_cell.workspace = true

# Internal deps
gear-core.workspace = true
gear-core-errors.workspace = true
core-processor.workspace = true
gear-backend-common.workspace = true
gear-backend-wasmi = { workspace = true, features = ["std"] }

[dev-dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
