[package]
name = "gmeta"
version.workspace = true
edition.workspace = true

[dependencies]
scale-info.workspace = true
blake2-rfc.workspace = true
hex = { workspace = true, features = ["alloc"] }
gmeta-codegen = { path = "codegen", optional = true }
derive_more.workspace = true

[dev-dependencies]
gear-wasm-builder.workspace = true
gstd.workspace = true
parity-scale-codec.workspace = true

[features]
codegen = ["gmeta-codegen"]
