[package]
name = "gmeta"
description = "Metadata library for Gear programs"
keywords = ["gear", "wasm"]
categories = ["wasm"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gmeta"

[dependencies]
scale-info.workspace = true
blake2-rfc.workspace = true
hex = { workspace = true, features = ["alloc"] }
gmeta-codegen = { workspace = true, optional = true }
derive_more.workspace = true

[dev-dependencies]
gear-wasm-builder.version = "~1"
gstd.version = "~1"
parity-scale-codec.workspace = true

[features]
codegen = ["gmeta-codegen"]
