[package]
name = "gnc"
description = "Gear next client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gclient.workspace = true
gtest.workspace = true
tokio.workspace = true
tracing.workspace = true
gear-core.workspace = true
gprimitives.workspace = true
anyhow.workspace = true
parity-scale-codec.workspace = true
gsdk.workspace = true

[dev-dependencies]
demo-proxy = { workspace = true, features = ["std"] }
