[package]
name = "gprimitives"
description = "Gear programs' primitives"
documentation = "https://docs.rs/gprimitives"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
derive_more.workspace = true
primitive-types = { workspace = true, features = ["scale-info", "rustc-hex"] }
parity-scale-codec = { workspace = true, features = ["derive"], optional = true }
scale-info = { workspace = true, features = ["derive"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
hex.workspace = true
gear-ss58.workspace = true

[features]
codec = ["parity-scale-codec", "scale-info"]
serde = ["dep:serde", "primitive-types/serde_no_std"]
