[package]
name = "gprimitives"
description = "Gear programs' primitives"
documentation = "https://docs.rs/gprimitives"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
alloy-primitives = { workspace = true, optional = true }
alloy-sol-types = { workspace = true, optional = true }
bytemuck = { workspace = true, features = ["derive"] }
derive_more.workspace = true
primitive-types = { workspace = true, features = ["scale-info", "rustc-hex"] }
scale-info = { workspace = true, features = ["derive"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
hex.workspace = true
gear-ss58.workspace = true
thiserror.workspace = true

[features]
default = ["std"]
std = []
codec = ["dep:scale-info"]
serde = ["dep:serde", "primitive-types/serde", "std"]
ethexe = ["dep:alloy-primitives", "dep:alloy-sol-types"]
